--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "raavi02/raavi02.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "mee_square.jpg"
   name             : "Raavi Gupta"
   pronouns         : # example: "she/her"  
   bio              : "MSCS student at Columbia University"
