--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,16 +6,16 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  # - title: "Teaching"
+  #   url: /teaching/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
   - title: "CV"
     url: /cv/      
 
-  - title: "My space"
-    url: /year-archive/
+  # - title: "My space"
+  #   url: /year-archive/
     
 
     
