--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   - title: "CV"
     url: /cv/      
 
-#   - title: "My space"
-#     url: /year-archive/
+  - title: "Fun"
+    url: /fun/
     
 
     
